<resources>
    <string name="app_name">Imagine</string>
    <string name="contact">Malte Schoppe\nSpitalhofstraße 56\n94032 Passau\n\nImagine@passau.enactus.de</string>
    <string name="info_string">Unsere Pläne sind groß, der Weg jedoch noch weit. \nIn unserem Android-Prototypen
        findest du die Grundfunktionen von Imagine. \nMatz (goat) und Malte (auch goat) arbeiten
        fleißig an neuen Funktionen der App. Wir sind dabei, die Android-Entwicklung zu erlernen,
        daher wird es noch ein wenig dauern, bis wir den Stand der iOS-App erreicht haben.\n\nAuf
        unserer Website findest du weitere Informationen zu Imagine, unseren Zielen, unseren kommenden
        Funktionen, unser Open Source Repository und vieles mehr:</string>
    <string name="toggle1">Ollah</string>
    <string name="toggle2">Ollah</string>
    <string name="addOn_singleTopic_header">Verlinke ein aussagekräftiges Thema.</string>
    <string name="addOn_singleTopic_description">Verlinke mit diesem AddOn eine andere Community, die den Menschen aus der derzeitigen Community interessant finden könnten. Die Darstellung enthält Bilder-Beiträge, sowie die Beschreibung der Community in der Vorschau.</string>
    <string name="placeholder_user_feed">Dieser User hat noch keine Beiträge hochgeladen</string>
    <string name="placeholder_community_feed">Es sind noch keine Beiträge zu diesem Thema zu finden</string>
    <string name="placeholder_addon">Erstelle jetzt das erste Thema</string>
    <string name="new_post_header_label">Neuer Beitrag</string>
    <string name="new_post_picture_label">Bild:</string>
    <string name="new_post_picture_selection">Bild</string>
    <string name="new_post_title_label">Titel:</string>
    <string name="new_post_description_label">Beschreibung:</string>
    <string name="new_post_destination_label">Ziel:</string>
    <string name="new_post_link_community_button_label">Community verlinken</string>
    <string name="new_post_share_button_label">Teilen</string>
    <string name="postcount">Beiträge: </string>
    <string name="followercount">Follower: </string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="anonym">Anonym</string>
    <string name="post_activity_comment_fail">Kommentar konnte nicht hochgeladen werden!</string>
    <string name="topics">Themen</string>
    <string name="discussion">Diskussion</string>
    <string name="feed">Feed</string>
    <string name="imagine_tag">imagine</string>
    <string name="topTopic_weekly_header_label">Die Themen der Woche:</string>
    <string name="arguments_dialog_fragment_toast_no_user">Du musst eingeloggt sein um Argumente zu erstellen!</string>
    <string name="arguments_dialog_fragment_toast_fields_empty">Bitte geben einen Titel und eine Beschreibung an!</string>
    <string name="arguments_dialog_fragment_toast_argument_fail">Argument wurde nicht hinzugefügt!</string>
    <string name="communities_header_header_text">Communities</string>
    <string name="communities_sub_header_trending">Angesagt</string>
    <string name="communities_sub_header_current_discussions">Aktuelle Diskussonen</string>
    <string name="communities_sub_header_followed_communities">Deine Communities</string>
    <string name="community_addons_preview_viewholder_title">Füge eine Kollektion mit Beiträgen und Themen hinzu.</string>
    <string name="community_addons_preview_viewholder_description">In dies</string>
    <string name="community_addons_preview_viewholder_qanda_header">Füge ein Frage/Antwort AddOn hinzu.</string>
    <string name="community_addons_preview_viewholder_qanda_description">Füge dieses AddOn hinzu, um einen Ort für mögliche Fragen zu  schaffen.
        Anfänger können so schneller lernen und Neulinge oder Fremde sich einfacher an einem Ort oder einer Community zurechtfinden.</string>
    <string name="community_new_community_activty_login">Bitte logge dich ein um eine Community zu erstellen!</string>
    <string name="community_new_community_activty_name">Bitte geben Sie einen Namen für Ihre Community ein!</string>
    <string name="community_new_community_activty_description">Bitte geben Sie eine Beschreibung für Ihre Community ein!</string>
    <string name="community_new_community_activity_success">Community erstellt!</string>
    <string name="community_new_community_activity_fail">Community konnte nicht erstellt werden!</string>
    <string name="community_recent_header_recents">Kürzlich besucht:</string>
    <string name="community_viewpager_activity_login">Du musst eingeloggt sein um eine Community im Feed zu teilen.</string>
    <string name="community_viewpager_activity_succ">Community im Feed verlinkt.</string>
    <string name="community_viewpager_activity_fail">Teilen der Community ist fehlgeschlagen.</string>
    <string name="community_viewpager_activity_topics">Themen:</string>
    <string name="community_viewpager_activity_discussion">Diskussionen:</string>
    <string name="community_viewpager_activity_feed">Feed:</string>
    <string name="community_viewpager_activity_title">Bitte füge einen Titel hinzu.</string>
    <string name="community_viewpager_activity_abort">Abbrechen</string>
    <string name="community_viewpager_activity_title_hint">Titel</string>
    <string name="community_viewpager_activity_description_hint">Beschreibung</string>
    <string name="community_viewpager_activity_post">Posten</string>
    <string name="community_viewpager_activity_post_community_title">Teile diese Community</string>
    <string name="community_viewpager_activity_post_community_message">Teile diese Community im Haupt-Feed mit deinen Mitmenschen. Nutze den Title um z.B. zu beschreiben, was diese Community für dich besonders macht.</string>
    <string name="community_pick_activity_communities">Communities</string>
    <string name="community_pick_activity_discussion">Diskussionen</string>
    <string name="community_pick_activity_own_comms">Deine Communities</string>
    <string name="own_comms_fragment_login">Logge dich ein um hier deine Communities zu sehen!</string>
    <string name="default_viewholder_unknow_date">Unbekanntes Datum</string>
    <string name="default_viewholder_unknow_post">Fehlerhafter Post</string>
    <string name="placeholder_viewholder_description">Hier gibt es leider noch nichts zu sehen.</string>
    <string name="informaton_activity_delete">Dein Account wird innerhalb von 48h gelöscht. Logge dich aus, wir übernehmen den Rest.</string>
    <string name="new_post_fragment_folder_dialog_title">Post ein oder mehrere Bilder</string>
    <string name="new_post_fragment_folder_dialog_message">Halte ein Bild gedrückt, um bis zu drei Bilder auszuwählen. Tippe anschließend auf \'Öffnen\'</string>
    <string name="new_post_fragment_folder_dialog_multiple">Mehrere</string>
    <string name="new_post_fragment_folder_dialog_single">Einzeln</string>
    <string name="new_post_fragment_info_message">"Standardmäßig postest du im Imagine Feed. Poste hier alles, was " +
                                "du mit der Welt teilen möchtest.\n\nWählst du eine Community aus, kannst du entscheiden," +
                                " ob du deinen Beitrag im Imagine Feed teilst oder nur in einer Community. Die Follower einer Community sehen dann deinen Beitrag" +
                                " in ihrem angepassten Imagine-Feed.\nPoste in der Community also alles, was sehr themenspezifisch ist oder nicht für die breite Masse zugänglich ist."</string>
    <string name="new_post_fragment_destination">Feed</string>
    <string name="new_post_fragment_three">Bitte wähle nicht mehr als drei Bilder aus.</string>
    <string name="new_post_fragment_single_image">Um ein Bild auszuwählen klicken Sie bitte auf \'Einzeln\'.</string>
    <string name="new_post_fragment_dialog_community_title">Wo möchtest du Posten?</string>
    <string name="new_post_fragment_dialog_community_message">Möchtest du den Beitrag mit allen im Hauptfeed, oder nur in der Community posten?</string>
    <string name="new_post_fragment_dialog_community_positiv">Mit allen teilen.</string>
    <string name="new_post_fragment_dialog_community_negative">Mit der Community teilen.</string>
    <string name="new_post_fragment_community">Community</string>
    <string name="new_post_fragment_share_title">Gib bitte einen Title ein.</string>
    <string name="new_post_fragment_share_image">Bitte wähle ein Bild aus.</string>
    <string name="new_post_fragment_share_link">Gib bitte einen Link ein.</string>
    <string name="new_post_fragment_share_login">Logge dich ein um zu Posten.</string>
    <string name="new_post_fragment_images">Bitte wähle mehrere Bilder aus.</string>
    <string name="new_post_fragment_mp4">Im Moment unterstützen wir leider nur Links im .mp4 Format.</string>
    <string name="new_post_fragment_succ_title">Vielen Dank!</string>
    <string name="new_post_fragment_succ_message">Nett, dass du deine Weisheiten mit uns teilst.</string>
    <string name="new_post_fragment_succ_ok">OK</string>
    <string name="notification_viewholder_post">Dein Beitrag wurde </string>
    <string name="notification_viewholder_upvote"> mal geliked.</string>
    <string name="notification_viewholder_comment"> mal kommentiert.</string>
    <string name="notification_viewholder_friend_title">Du hast eine Freundschaftsanfrage:</string>
    <string name="notification_viewholder_friend_body"> möchte mit dir befreundet sein</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_signup">Sign up</string>
    <string name="activity_argument_sources">Quellen:</string>
    <string name="activity_argument_recycler">Hier noch RecyclerView?</string>
    <string name="activity_argument_counterargs">Gegenargumente:</string>
    <string name="new_addon_activity_welcome">Willkommen im Addon Store</string>
    <string name="new_addon_activity_description">Wähle eine Erweiterung aus, um die Community auf deine Weise zu vervollständigen.
         Biete einen detaillierten Einblick, eine andere Sichtweise oder einen einfachen Einstieg. Es sind dir keine Grenzen gesetzt.</string>
    <string name="new_addon_activity_next">Weiter</string>
    <string name="proposal_activity_header">Wie kann sich Imagine verbessern?</string>
    <string name="proposal_activity_title">Titel:</string>
    <string name="proposal_activity_summary">Zusammenfassung:</string>
    <string name="proposal_activity_idea">Idee:</string>
    <string name="proposal_activity_tv21">Bei Imagine wollen wir die wichtigen Entscheidungen gemeinsam treffen. \nReiche eigene Vorschläge ein und lass die Community entscheiden.</string>
    <string name="proposal_activity_send">Senden</string>
    <string name="proposal_activity_recents">Bisherige Vorschläge</string>
    <string name="report_dialog_fragment_exp">Ein Mitarbeiter wird deine Anfrage überprüfen.
        Sollte deine Meldung korrekt sein, wird dieser Beitrag optisch markiert. Zu einem späteren Zeitpunkt übernehmen die User demokratisch diese Überprüfung.
        \nVielen Dank für deine Mithilfe!</string>
    <string name="report_dialog_fragment_hate">Hass</string>
    <string name="report_dialog_fragment_racism">Rassismus</string>
    <string name="report_dialog_fragment_spam">Spam</string>
    <string name="report_dialog_fragment_fake">Fakenews</string>
    <string name="report_dialog_fragment_unapp">Unangebrachte Inhalte</string>
    <string name="report_dialog_fragment_else">Sonstiges</string>
    <string name="report_dialog_fragment_report">Melden</string>
    <string name="report_dialog_fragment_note">Anmerkungen:</string>
    <string name="bug_description">Erkläre uns bitte mit deinen Worten kurz, wo es ein Problem gibt. Je mehr Informationen wir haben, desto besser können wir das Problem eingrenzen.
        Wir werden uns so schnell wie möglich darum kümmern!</string>
    <string name="bug_header">Wo gibt es ein Problem?</string>
</resources>