<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/report_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_alert" />

    <TextView
        android:id="@+id/report_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ibm_regular"
        android:text="@string/report_dialog_fragment_exp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <LinearLayout
        android:id="@+id/report_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_exp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/hate_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog_fragment_hate"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/racism_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog_fragment_racism"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/spam_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog_fragment_spam"/>
            <RadioButton
                android:id="@+id/fake_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog_fragment_fake"/>
            <RadioButton
                android:id="@+id/unap_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog_fragment_unapp"/>
            <RadioButton
                android:id="@+id/else_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_dialog_fragment_else"/>
        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/report_reason"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_border"
        android:text="@string/report_dialog_fragment_report"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_reason" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ibm_medium"
        android:text="@string/report_dialog_fragment_note"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_ll" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ibm_semi_bold"
        android:text="@string/report_dialog_fragment_report"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>