<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/proposal_header_label2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/ibm_semi_bold"
        android:text="@string/bug_header"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bug_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bug_description"
        app:layout_constraintEnd_toEndOf="@+id/proposal_header_label2"
        app:layout_constraintStart_toStartOf="@+id/proposal_header_label2"
        app:layout_constraintTop_toBottomOf="@+id/proposal_header_label2" />

    <TextView
        android:id="@+id/proposal_title_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ibm_medium"
        android:text="Problem:"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/bug_description"
        app:layout_constraintTop_toBottomOf="@id/bug_description" />

    <EditText
        android:id="@+id/bug_report_editText"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/ibm_regular"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/bug_description"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/proposal_title_label2"
        app:layout_constraintTop_toBottomOf="@+id/proposal_title_label2" />

    <Button
        android:id="@+id/bug_report_send_button"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:text="@string/proposal_activity_send"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/bug_report_editText"
        app:layout_constraintTop_toBottomOf="@+id/bug_report_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>